Fix todo li style overflow hidden

--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   padding: 0;
+  overflow: hidden;
 }
 .todo li {
   text-align: left;
